--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.4",
         "jenssegers/agent": "^2.6",
+        "jerrygaoyang/laravel-jwt": "^1.0",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
