--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.4",
+        "intervention/image": "^2.7",
         "jenssegers/agent": "^2.6",
         "jerrygaoyang/laravel-jwt": "^1.0",
         "kalnoy/nestedset": "^6.0",
